--- a/src/App.css
+++ b/src/App.css
@@ -1,74 +1,34 @@
-@import '~antd/dist/antd.css';
-.link {
-  border: 1px solid black;
-  list-style: none;
-  padding: 4px;
-  font-size: bold;
-  color: black;
-  margin-bottom: -23px;
+body{
+    margin:0;
+    padding: 0;
 }
 
-.header-main {
-  background-color: #fff;
-  border: 1px solid black;
-}
-.table, th, td {
-  border: 1px solid black;
-}
-
-.table {
-  border-collapse: collapse;
-  border-spacing: 10px;
-  width: 100%;
+.header{
+    width: 100%;
+    height: 50px;
+    padding: 10px;
     
-  
-}
-td{
-  width: 900px;
+    border:  1px solid black;
 }
 
-th, td {
-  border: 1px solid black;
-  padding: 15px;
+.panel{
+    width: 120px;
+    height: 500px;
+    border: 1px solid black;
+    margin-top: -42px;
 }
 
-th{
-  height: 40px;
-  text-align: left;
-  height: 40px;
-    vertical-align: bottom;
-}
-
-.content {
-  background: #fff;
-  border: 1px solid black;
-  min-height: 520px;
-}
-.sider {
-  background: #fff;
-  border: 1px solid black;
-}
-.link-header{
-  border:  1px solid black;
-  height: 40px;;
-  padding: 8px;
-  
-}
 .search{
-  margin-bottom: 40px;
-  width: 100%;
-  border:  1px solid black;
-  height: 40px;
-  padding: 8px;
+    width:115px;
+    height: 34px;
 }
 
-
-.disabled-link{
-  pointer-events: none;
-}
-
-.title-wip{
-  margin:40px;
-  text-align: center;
-  font-size: 3em;
+.content{
+    display: flex;
+    margin-left: 9.5%;
+    height: 40px;
+    
+    text-align: center;
+    width: 100%;
+    border: 1px solid black;
 }
