--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,28 @@ body{
     width: 100%;
     border: 1px solid black;
 }
+
+.table {
+    border-collapse: collapse;
+    border-spacing: 1px;
+    width: 50%;
+    margin-top: 6%;
+    display: flex;
+      
+    
+  }
+  td{
+    width: 50px;
+  }
+  
+  th, td {
+    border: 1px solid black;
+    padding: 10px;
+  }
+  
+  th{
+    height: 4px;
+    text-align: left;
+    
+      vertical-align: bottom;
+  }
